--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,11 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+/* generics */
+
+body {
+    background-color: #dfdbdb;
+}
+
+
