--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,22 @@ body {
     background-color: #dfdbdb;
 }
 
+.logo {
+    height: 50px;
+    vertical-align: middle;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+/* header */
+header {
+   height: 80px;
+    background-color: white;
+    line-height: 80px;
+}
+
+.title {
+    display: inline;
+    font-size: 2.5em;
+}
 
