--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,11 @@ header {
     font-size: 2.5em;
 }
 
+.container {
+    max-width: 1000px;
+    height: 700px;
+    margin: auto;
+    background-color: white;
+    margin-top: 30px;
+    border-radius: 5px;
+}
