--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@ body {
     background-color: #dfdbdb;
 }
 
+/* header */
+header {
+    height: 80px;
+    background-color: white;
+    line-height: 80px;
+}
 .logo {
     height: 50px;
     vertical-align: middle;
@@ -19,18 +25,12 @@ body {
     margin-bottom: 20px;
 }
 
-/* header */
-header {
-   height: 80px;
-    background-color: white;
-    line-height: 80px;
-}
-
 .title {
     display: inline;
     font-size: 2.5em;
 }
 
+/* main container */
 .container {
     max-width: 1000px;
     height: 700px;
