--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,23 @@ header {
     font-size: 2.5em;
 }
 
+/* nav container */
+.nav-container{
+    max-width: 1000px;
+    background-color: white;
+    height: 50px;
+    margin: auto;
+    margin-top: 30px;
+    border-radius: 5px 5px 0 0 ;
+
+}
+
 /* main container */
 .container {
     max-width: 1000px;
-    height: 700px;
+    height: 600px;
     margin: auto;
     background-color: white;
-    margin-top: 30px;
-    border-radius: 5px;
+    margin-top: 1px;
+    border-radius: 0 0 5px 5px;
 }
