--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ li{
     border: 1px solid #eb3716; 
 }
 
-span, .labe {
+span, .label {
     display: inline-block;
     width: 85px;
     height: 30px;
