--- a/css/style.css
+++ b/css/style.css
@@ -3,32 +3,35 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* generics */
 
 body {
     background-color: #dfdbdb;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+    height: 80px;
+    line-height: 80px;
+    padding-left: 20px;
+    background-color: white;
+}
+
+h1 {
+    display: inline;
+    font-size: 38px;
+    font-weight: 900px;
+    vertical-align: middle;
 }
 
 /* header */
-header {
-    height: 80px;
-    background-color: white;
-    line-height: 80px;
-}
 .logo {
     height: 50px;
     vertical-align: middle;
-    margin-left: 20px;
-    margin-bottom: 20px;
 }
 
-.title {
-    display: inline;
-    font-size: 2.5em;
-}
 
 /* nav container and main container */
 .nav-container, .main-container {
@@ -47,7 +50,7 @@ header {
 
 /* main container */
 .main-container {
-    height: 690px;
+    /* height: 690px; */
     margin-top: 1px;
     border-radius: 0 0 5px 5px;
     padding-left: 40px;
